src/ParGrammar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from ParGrammar.y
-----------------------------------------------------------------------------

state 106 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListTopDef                              (4)
	TopDef -> 'global' Type Item ';'                   (5)
	TopDef -> Type Ident '(' ListArg ')' Block         (6)
	ListTopDef -> TopDef                               (7)
	ListTopDef -> TopDef ListTopDef                    (8)
	Arg -> Type Ident                                  (9)
	Arg -> 'var' Type Ident                            (10)
	ListArg ->                                         (11)
	ListArg -> Arg                                     (12)
	ListArg -> Arg ',' ListArg                         (13)
	Block -> '{' ListStmt '}'                          (14)
	ListStmt ->                                        (15)
	ListStmt -> Stmt ListStmt                          (16)
	Stmt -> ';'                                        (17)
	Stmt -> Block                                      (18)
	Stmt -> Type Item ';'                              (19)
	Stmt -> Ident '=' Expr ';'                         (20)
	Stmt -> 'return' Expr ';'                          (21)
	Stmt -> 'return' ';'                               (22)
	Stmt -> 'if' '(' Expr ')' Stmt                     (23)
	Stmt -> 'if' '(' Expr ')' Stmt 'else' Stmt         (24)
	Stmt -> 'while' '(' Expr ')' Stmt                  (25)
	Stmt -> Expr ';'                                   (26)
	Item -> Ident                                      (27)
	Item -> Ident '=' Expr                             (28)
	Type -> 'int'                                      (29)
	Type -> 'string'                                   (30)
	Type -> 'bool'                                     (31)
	Expr6 -> Ident                                     (32)
	Expr6 -> Integer                                   (33)
	Expr6 -> 'true'                                    (34)
	Expr6 -> 'false'                                   (35)
	Expr6 -> Ident '(' ListExpr ')'                    (36)
	Expr6 -> String                                    (37)
	Expr6 -> '(' Expr ')'                              (38)
	Expr5 -> '-' Expr6                                 (39)
	Expr5 -> '!' Expr6                                 (40)
	Expr5 -> Expr6                                     (41)
	Expr4 -> Expr4 MulOp Expr5                         (42)
	Expr4 -> Expr5                                     (43)
	Expr3 -> Expr3 AddOp Expr4                         (44)
	Expr3 -> Expr4                                     (45)
	Expr2 -> Expr2 RelOp Expr3                         (46)
	Expr2 -> Expr3                                     (47)
	Expr1 -> Expr2 '&&' Expr1                          (48)
	Expr1 -> Expr2                                     (49)
	Expr -> Expr1 '||' Expr                            (50)
	Expr -> Expr1                                      (51)
	ListExpr ->                                        (52)
	ListExpr -> Expr                                   (53)
	ListExpr -> Expr ',' ListExpr                      (54)
	AddOp -> '+'                                       (55)
	AddOp -> '-'                                       (56)
	MulOp -> '*'                                       (57)
	MulOp -> '/'                                       (58)
	MulOp -> '%'                                       (59)
	RelOp -> '<'                                       (60)
	RelOp -> '<='                                      (61)
	RelOp -> '>'                                       (62)
	RelOp -> '>='                                      (63)
	RelOp -> '=='                                      (64)
	RelOp -> '!='                                      (65)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	','            { PT _ (TS _ 9) }
	'-'            { PT _ (TS _ 10) }
	'/'            { PT _ (TS _ 11) }
	';'            { PT _ (TS _ 12) }
	'<'            { PT _ (TS _ 13) }
	'<='           { PT _ (TS _ 14) }
	'='            { PT _ (TS _ 15) }
	'=='           { PT _ (TS _ 16) }
	'>'            { PT _ (TS _ 17) }
	'>='           { PT _ (TS _ 18) }
	'bool'         { PT _ (TS _ 19) }
	'else'         { PT _ (TS _ 20) }
	'false'        { PT _ (TS _ 21) }
	'global'       { PT _ (TS _ 22) }
	'if'           { PT _ (TS _ 23) }
	'int'          { PT _ (TS _ 24) }
	'return'       { PT _ (TS _ 25) }
	'string'       { PT _ (TS _ 26) }
	'true'         { PT _ (TS _ 27) }
	'var'          { PT _ (TS _ 28) }
	'while'        { PT _ (TS _ 29) }
	'{'            { PT _ (TS _ 30) }
	'||'           { PT _ (TS _ 31) }
	'}'            { PT _ (TS _ 32) }
	L_Ident        { PT _ (TV _) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	TopDef          rules 5, 6
	ListTopDef      rules 7, 8
	Arg             rules 9, 10
	ListArg         rules 11, 12, 13
	Block           rule  14
	ListStmt        rules 15, 16
	Stmt            rules 17, 18, 19, 20, 21, 22, 23, 24, 25, 26
	Item            rules 27, 28
	Type            rules 29, 30, 31
	Expr6           rules 32, 33, 34, 35, 36, 37, 38
	Expr5           rules 39, 40, 41
	Expr4           rules 42, 43
	Expr3           rules 44, 45
	Expr2           rules 46, 47
	Expr1           rules 48, 49
	Expr            rules 50, 51
	ListExpr        rules 52, 53, 54
	AddOp           rules 55, 56
	MulOp           rules 57, 58, 59
	RelOp           rules 60, 61, 62, 63, 64, 65

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram_internal -> . Program               (rule 0)

	'bool'         shift, and enter state 7
	'global'       shift, and enter state 8
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10

	Program        goto state 3
	TopDef         goto state 4
	ListTopDef     goto state 5
	Type           goto state 6

State 1

	Ident -> . L_Ident                                  (rule 1)

	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'/'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'||'           reduce using rule 1


State 3

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 4

	ListTopDef -> TopDef .                              (rule 7)
	ListTopDef -> TopDef . ListTopDef                   (rule 8)

	'bool'         shift, and enter state 7
	'global'       shift, and enter state 8
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10
	%eof           reduce using rule 7

	TopDef         goto state 4
	ListTopDef     goto state 13
	Type           goto state 6

State 5

	Program -> ListTopDef .                             (rule 4)

	%eof           reduce using rule 4


State 6

	TopDef -> Type . Ident '(' ListArg ')' Block        (rule 6)

	L_Ident        shift, and enter state 2

	Ident          goto state 12

State 7

	Type -> 'bool' .                                    (rule 31)

	L_Ident        reduce using rule 31


State 8

	TopDef -> 'global' . Type Item ';'                  (rule 5)

	'bool'         shift, and enter state 7
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10

	Type           goto state 11

State 9

	Type -> 'int' .                                     (rule 29)

	L_Ident        reduce using rule 29


State 10

	Type -> 'string' .                                  (rule 30)

	L_Ident        reduce using rule 30


State 11

	TopDef -> 'global' Type . Item ';'                  (rule 5)

	L_Ident        shift, and enter state 2

	Ident          goto state 15
	Item           goto state 16

State 12

	TopDef -> Type Ident . '(' ListArg ')' Block        (rule 6)

	'('            shift, and enter state 14


State 13

	ListTopDef -> TopDef ListTopDef .                   (rule 8)

	%eof           reduce using rule 8


State 14

	TopDef -> Type Ident '(' . ListArg ')' Block        (rule 6)

	')'            reduce using rule 11
	'bool'         shift, and enter state 7
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10
	'var'          shift, and enter state 22

	Arg            goto state 19
	ListArg        goto state 20
	Type           goto state 21

State 15

	Item -> Ident .                                     (rule 27)
	Item -> Ident . '=' Expr                            (rule 28)

	';'            reduce using rule 27
	'='            shift, and enter state 18


State 16

	TopDef -> 'global' Type Item . ';'                  (rule 5)

	';'            shift, and enter state 17


State 17

	TopDef -> 'global' Type Item ';' .                  (rule 5)

	'bool'         reduce using rule 5
	'global'       reduce using rule 5
	'int'          reduce using rule 5
	'string'       reduce using rule 5
	%eof           reduce using rule 5


State 18

	Item -> Ident '=' . Expr                            (rule 28)

	'!'            shift, and enter state 37
	'('            shift, and enter state 38
	'-'            shift, and enter state 39
	'false'        shift, and enter state 40
	'true'         shift, and enter state 41
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 42
	L_quoted       shift, and enter state 43

	Ident          goto state 27
	Integer        goto state 28
	String         goto state 29
	Expr6          goto state 30
	Expr5          goto state 31
	Expr4          goto state 32
	Expr3          goto state 33
	Expr2          goto state 34
	Expr1          goto state 35
	Expr           goto state 36

State 19

	ListArg -> Arg .                                    (rule 12)
	ListArg -> Arg . ',' ListArg                        (rule 13)

	')'            reduce using rule 12
	','            shift, and enter state 26


State 20

	TopDef -> Type Ident '(' ListArg . ')' Block        (rule 6)

	')'            shift, and enter state 25


State 21

	Arg -> Type . Ident                                 (rule 9)

	L_Ident        shift, and enter state 2

	Ident          goto state 24

State 22

	Arg -> 'var' . Type Ident                           (rule 10)

	'bool'         shift, and enter state 7
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10

	Type           goto state 23

State 23

	Arg -> 'var' Type . Ident                           (rule 10)

	L_Ident        shift, and enter state 2

	Ident          goto state 67

State 24

	Arg -> Type Ident .                                 (rule 9)

	')'            reduce using rule 9
	','            reduce using rule 9


State 25

	TopDef -> Type Ident '(' ListArg ')' . Block        (rule 6)

	'{'            shift, and enter state 66

	Block          goto state 65

State 26

	ListArg -> Arg ',' . ListArg                        (rule 13)

	')'            reduce using rule 11
	'bool'         shift, and enter state 7
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10
	'var'          shift, and enter state 22

	Arg            goto state 19
	ListArg        goto state 64
	Type           goto state 21

State 27

	Expr6 -> Ident .                                    (rule 32)
	Expr6 -> Ident . '(' ListExpr ')'                   (rule 36)

	'!='           reduce using rule 32
	'%'            reduce using rule 32
	'&&'           reduce using rule 32
	'('            shift, and enter state 63
	')'            reduce using rule 32
	'*'            reduce using rule 32
	'+'            reduce using rule 32
	','            reduce using rule 32
	'-'            reduce using rule 32
	'/'            reduce using rule 32
	';'            reduce using rule 32
	'<'            reduce using rule 32
	'<='           reduce using rule 32
	'=='           reduce using rule 32
	'>'            reduce using rule 32
	'>='           reduce using rule 32
	'||'           reduce using rule 32


State 28

	Expr6 -> Integer .                                  (rule 33)

	'!='           reduce using rule 33
	'%'            reduce using rule 33
	'&&'           reduce using rule 33
	')'            reduce using rule 33
	'*'            reduce using rule 33
	'+'            reduce using rule 33
	','            reduce using rule 33
	'-'            reduce using rule 33
	'/'            reduce using rule 33
	';'            reduce using rule 33
	'<'            reduce using rule 33
	'<='           reduce using rule 33
	'=='           reduce using rule 33
	'>'            reduce using rule 33
	'>='           reduce using rule 33
	'||'           reduce using rule 33


State 29

	Expr6 -> String .                                   (rule 37)

	'!='           reduce using rule 37
	'%'            reduce using rule 37
	'&&'           reduce using rule 37
	')'            reduce using rule 37
	'*'            reduce using rule 37
	'+'            reduce using rule 37
	','            reduce using rule 37
	'-'            reduce using rule 37
	'/'            reduce using rule 37
	';'            reduce using rule 37
	'<'            reduce using rule 37
	'<='           reduce using rule 37
	'=='           reduce using rule 37
	'>'            reduce using rule 37
	'>='           reduce using rule 37
	'||'           reduce using rule 37


State 30

	Expr5 -> Expr6 .                                    (rule 41)

	'!='           reduce using rule 41
	'%'            reduce using rule 41
	'&&'           reduce using rule 41
	')'            reduce using rule 41
	'*'            reduce using rule 41
	'+'            reduce using rule 41
	','            reduce using rule 41
	'-'            reduce using rule 41
	'/'            reduce using rule 41
	';'            reduce using rule 41
	'<'            reduce using rule 41
	'<='           reduce using rule 41
	'=='           reduce using rule 41
	'>'            reduce using rule 41
	'>='           reduce using rule 41
	'||'           reduce using rule 41


State 31

	Expr4 -> Expr5 .                                    (rule 43)

	'!='           reduce using rule 43
	'%'            reduce using rule 43
	'&&'           reduce using rule 43
	')'            reduce using rule 43
	'*'            reduce using rule 43
	'+'            reduce using rule 43
	','            reduce using rule 43
	'-'            reduce using rule 43
	'/'            reduce using rule 43
	';'            reduce using rule 43
	'<'            reduce using rule 43
	'<='           reduce using rule 43
	'=='           reduce using rule 43
	'>'            reduce using rule 43
	'>='           reduce using rule 43
	'||'           reduce using rule 43


State 32

	Expr4 -> Expr4 . MulOp Expr5                        (rule 42)
	Expr3 -> Expr4 .                                    (rule 45)

	'!='           reduce using rule 45
	'%'            shift, and enter state 60
	'&&'           reduce using rule 45
	')'            reduce using rule 45
	'*'            shift, and enter state 61
	'+'            reduce using rule 45
	','            reduce using rule 45
	'-'            reduce using rule 45
	'/'            shift, and enter state 62
	';'            reduce using rule 45
	'<'            reduce using rule 45
	'<='           reduce using rule 45
	'=='           reduce using rule 45
	'>'            reduce using rule 45
	'>='           reduce using rule 45
	'||'           reduce using rule 45

	MulOp          goto state 59

State 33

	Expr3 -> Expr3 . AddOp Expr4                        (rule 44)
	Expr2 -> Expr3 .                                    (rule 47)

	'!='           reduce using rule 47
	'&&'           reduce using rule 47
	')'            reduce using rule 47
	'+'            shift, and enter state 57
	','            reduce using rule 47
	'-'            shift, and enter state 58
	';'            reduce using rule 47
	'<'            reduce using rule 47
	'<='           reduce using rule 47
	'=='           reduce using rule 47
	'>'            reduce using rule 47
	'>='           reduce using rule 47
	'||'           reduce using rule 47

	AddOp          goto state 56

State 34

	Expr2 -> Expr2 . RelOp Expr3                        (rule 46)
	Expr1 -> Expr2 . '&&' Expr1                         (rule 48)
	Expr1 -> Expr2 .                                    (rule 49)

	'!='           shift, and enter state 49
	'&&'           shift, and enter state 50
	')'            reduce using rule 49
	','            reduce using rule 49
	';'            reduce using rule 49
	'<'            shift, and enter state 51
	'<='           shift, and enter state 52
	'=='           shift, and enter state 53
	'>'            shift, and enter state 54
	'>='           shift, and enter state 55
	'||'           reduce using rule 49

	RelOp          goto state 48

State 35

	Expr -> Expr1 . '||' Expr                           (rule 50)
	Expr -> Expr1 .                                     (rule 51)

	')'            reduce using rule 51
	','            reduce using rule 51
	';'            reduce using rule 51
	'||'           shift, and enter state 47


State 36

	Item -> Ident '=' Expr .                            (rule 28)

	';'            reduce using rule 28


State 37

	Expr5 -> '!' . Expr6                                (rule 40)

	'('            shift, and enter state 38
	'false'        shift, and enter state 40
	'true'         shift, and enter state 41
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 42
	L_quoted       shift, and enter state 43

	Ident          goto state 27
	Integer        goto state 28
	String         goto state 29
	Expr6          goto state 46

State 38

	Expr6 -> '(' . Expr ')'                             (rule 38)

	'!'            shift, and enter state 37
	'('            shift, and enter state 38
	'-'            shift, and enter state 39
	'false'        shift, and enter state 40
	'true'         shift, and enter state 41
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 42
	L_quoted       shift, and enter state 43

	Ident          goto state 27
	Integer        goto state 28
	String         goto state 29
	Expr6          goto state 30
	Expr5          goto state 31
	Expr4          goto state 32
	Expr3          goto state 33
	Expr2          goto state 34
	Expr1          goto state 35
	Expr           goto state 45

State 39

	Expr5 -> '-' . Expr6                                (rule 39)

	'('            shift, and enter state 38
	'false'        shift, and enter state 40
	'true'         shift, and enter state 41
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 42
	L_quoted       shift, and enter state 43

	Ident          goto state 27
	Integer        goto state 28
	String         goto state 29
	Expr6          goto state 44

State 40

	Expr6 -> 'false' .                                  (rule 35)

	'!='           reduce using rule 35
	'%'            reduce using rule 35
	'&&'           reduce using rule 35
	')'            reduce using rule 35
	'*'            reduce using rule 35
	'+'            reduce using rule 35
	','            reduce using rule 35
	'-'            reduce using rule 35
	'/'            reduce using rule 35
	';'            reduce using rule 35
	'<'            reduce using rule 35
	'<='           reduce using rule 35
	'=='           reduce using rule 35
	'>'            reduce using rule 35
	'>='           reduce using rule 35
	'||'           reduce using rule 35


State 41

	Expr6 -> 'true' .                                   (rule 34)

	'!='           reduce using rule 34
	'%'            reduce using rule 34
	'&&'           reduce using rule 34
	')'            reduce using rule 34
	'*'            reduce using rule 34
	'+'            reduce using rule 34
	','            reduce using rule 34
	'-'            reduce using rule 34
	'/'            reduce using rule 34
	';'            reduce using rule 34
	'<'            reduce using rule 34
	'<='           reduce using rule 34
	'=='           reduce using rule 34
	'>'            reduce using rule 34
	'>='           reduce using rule 34
	'||'           reduce using rule 34


State 42

	Integer -> L_integ .                                (rule 2)

	'!='           reduce using rule 2
	'%'            reduce using rule 2
	'&&'           reduce using rule 2
	')'            reduce using rule 2
	'*'            reduce using rule 2
	'+'            reduce using rule 2
	','            reduce using rule 2
	'-'            reduce using rule 2
	'/'            reduce using rule 2
	';'            reduce using rule 2
	'<'            reduce using rule 2
	'<='           reduce using rule 2
	'=='           reduce using rule 2
	'>'            reduce using rule 2
	'>='           reduce using rule 2
	'||'           reduce using rule 2


State 43

	String -> L_quoted .                                (rule 3)
